# OmniStreamStudio

./: .gitignore  DEV_NOTES.md  Optimizing.md  PLAN.md  README.md  check_status.ts  debug.sh  index.html  omnistream.db  omnistream.json  package-lock.json  package.json  run.sh  scratch.rs  scratch2.rs  server.cjs  test_ffmpeg  test_ffmpeg.js  test_ffmpeg.rs  test_ffmpeg_canvas.js  test_layers  test_layers.rs  test_twitch.sh  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: check_redirect.ts  custom-alert.sh  debug_curl.ts  debug_html.ts  debug_status.ts  follow-alert.sh  status.ts  test_legacy.ts
src/: main.ts  styles.css  vite-env.d.ts  web-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
web/: index.html  main.ts  styles.css  test-overlay.html
web-dist/: index.html
web-dist/assets/: index-2sd9q8Rd.js  index-B3eyuZoZ.js  index-B5rE1rrq.js  index-B80SqwYS.js  index-BB1Df6nl.js  index-BcM66PLU.js  index-BgpLhADG.js  index-BkjYN53K.js  index-Bl-dHXVs.js  index-BlVP_UgQ.js  index-Bqdtx2S5.js  index-Brv-pzwk.js  index-C-qzTT76.js  index-C4QxbsNj.js  index-CAVNMK7x.css  index-CCd67ipn.css  index-CNycBqmt.js  index-CRMeuIwc.js  index-CRj7XYns.js  index-CTeF5Nhg.js  index-C_DkN0tD.css  index-C_S0zRog.js  index-C_wJRGIE.js  index-CgcYk_fE.js  index-Cqn6xg6y.js  index-D0f92eVW.css  index-D0jhpG6O.js  index-D2XG7-LS.js  index-D7Y-RHnh.js  index-D7kCaysE.js  index-DAfvuRp4.js  index-DDZ6-4EH.js  index-DK5h4M7d.js  index-DLoV6LTi.js  index-DUBEEh7b.css  index-Dkh3ADuQ.js  index-DqZzRj_M.js  (+17 more)
(+2 files in other folders)
